InsuranceOrg/force-app/main/default/objects/vlocity_ins__SICCode__c/vlocity_ins__SICCode__c.object-meta.xml
<CustomObject>
    <description>The Standard Industrial Classification (SIC) is a system for classifying industries by a four-digit code that categorize companies by the type of business activities they engage in.</description>
    <label>SIC Code</label>
    <nameField>
        <label>SIC Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>