InsuranceOrg/force-app/main/default/objects/vlocity_ins__SICCode__c/fields/vlocity_ins__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DisplayName__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>