InsuranceOrg/force-app/main/default/objects/vlocity_ins__SICCode__c/fields/vlocity_ins__SICCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SICCode__c</fullName>
    <label>SIC Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>