InsuranceOrg/force-app/main/default/objects/vlocity_ins__SICCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__DisplayName__c</columns>
    <columns>vlocity_ins__Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>